  <resources>
    <string name="app_name">CovidTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bt_start">Submit</string>
      <string name="apollo_hospitals">Apollo Hospitals</string>
      <string name="apollo_hospitals_covid_section">Apollo Hospitals-Covid Section</string>
      <string name="patient_entry">Patient Entry</string>
      <string name="name">Name</string>
      <string name="age">Age</string>
      <string name="gender">Gender</string>
      <string name="location">Location</string>
      <string name="test_date_dd_mm_yy">Test Date (dd/mm/yy)</string>
      <string name="submit">submit</string>
      <string name="view_patient_records">View Patient Records</string>
      <string name="patient_record_entry">Patient Record Entry</string>
  </resources>