<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/patient_entry"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/txt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />
        <EditText
            android:id="@+id/txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="text" />
        <EditText
            android:id="@+id/txt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text" />
        <EditText
            android:id="@+id/txt_testdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/test_date_dd_mm_yy"
            android:inputType="date" />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            android:text="@string/submit" />
    </LinearLayout>
</RelativeLayout>
